<?xml version="1.0"?>
<package format="2">
  <name>formant</name>
  <version>0.0.0</version>
  <maintainer email="support@formant.io">formant</maintainer>
  <description>Example/starter package for integrating a ROS application with Formant</description>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <export></export>
</package>
